# labs

./: test.txt
IGI/: .gitignore  README.md
IGI/LR2/auth_service/src/: .pre-commit-config.yaml  pyproject.toml
IGI/LR2/auth_service/src/app/: config.py  containers.py
IGI/LR2/auth_service/src/app/api/: auth.py  main.py
IGI/LR2/django_core_service/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint-celery.sh  entrypoint.sh  pyproject.toml  pytest.ini
IGI/LR2/django_core_service/.github/workflows/: main.yaml
IGI/LR2/django_core_service/src/: data.json  manage.py
IGI/LR2/django_core_service/src/common_services/factories/: __init__.py  access_rights_factory.py  project_factory.py  project_invite_factory.py  project_member_factory.py  role_factory.py  tickets_factory.py
IGI/LR2/django_core_service/src/common_services/mixins/: __init__.py  audit_model_mixin.py
IGI/LR2/django_core_service/src/common_services/services/: __init__.py  auth_service.py  email_service.py
IGI/LR2/django_core_service/src/common_services/swagger_service/: apply_swagger_auto_schema.py
IGI/LR2/django_core_service/src/django_core_service/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
IGI/LR2/django_core_service/src/projects/: tasks.py  urls.py
IGI/LR2/django_core_service/src/tickets/: tasks.py  urls.py
IGI/LR5/src/: initial_data.json  pyproject.toml
IGI/LR5/src/common_services/permissions/: login_permissions.py
IGI/LR5/src/common_services/utils/: generate_product_code.py
IGI/LR5/src/dashboard/: urls.py
IGI/LR5/src/dashboard/views/: dashboard.py  open_apis.py
IGI/LR5/src/products/: admin.py  urls.py
IGI/LR5/src/products/forms/: orders_form.py  profuct_filter_form.py  promo_form.py  review_form.py  vacancy_form.py
IGI/LR5/src/products/models/: __init__.py  faq.py  news.py  order.py  order_item.py  product.py  product_category.py  product_model.py  promo_code.py  review.py  vacancy.py
IGI/LR5/src/products/views/: client_sales_summary.py  customers_contacts.py  faq_view.py  make_order.py  monthly_sales_by_category.py  most_popular_products.py  news.py  news_detail.py  order_delete.py  price_list.py  products.py  promo.py  review.py  search_product.py  unpopular_products.py  vacancy.py  vacancy_edit_view.py  yearly_revenue_report.py
IGI/LR5/src/src/: settings.py  urls.py
IGI/LR5/src/templates/: base.html
IGI/LR5/src/templates/dashboard/: cat_fact.html  dashboard.html  nationalize.html
IGI/LR5/src/templates/pages/: home.html
IGI/LR5/src/templates/products/: all_orders.html  client_sales_summary.html  confirm_delete_order.html  customer_contacts.html  faq.html  make_order.html  monthly_sales_by_category.html  most_popular_products.html  news_detail.html  news_list.html  price_list.html  product_list.html  product_reviews.html  promo_list.html  search_results.html  unpopular_products.html  vacancy_edit.html  vacancy_list.html  yearly_revenue_report.html
IGI/LR5/src/templates/users/: customers_by_city.html  login.html  register.html
IGI/LR5/src/tests/: tests.py
IGI/LR5/src/users/: urls.py
IGI/LR5/src/users/forms/: login.py  register_form.py
IGI/LR5/src/users/managers/: user_manager.py
IGI/LR5/src/users/models/: __init__.py  customer.py  user.py  user_profile.py
IGI/LR5/src/users/views/: customer_by_city.py  login.py  logout.py  register.py
(+138 files in other folders)
