[project]
name = "auth-core"
version = "0.1.0"
description = ""
authors = [
    {name = "DenisHrtn",email = "denispython16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dependency-injector (>=4.45.0,<5.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pgsql (>=2.2,<3.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "boto3 (>=1.37.0,<2.0.0)",
    "localstack (>=4.1.1,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytz (>=2025.1,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
